--- a/KeyLibrary/build.gradle
+++ b/KeyLibrary/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-14'
     api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
     api 'jp.wasabeef:recyclerview-animators:2.2.7'
-    api 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     api 'com.jakewharton:butterknife:10.1.0'
+    api 'com.github.tamsiree.RxTool:RxUI:2.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     api 'com.yanzhenjie:permission:2.0.3'
@@ -72,4 +72,6 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation files('libs/juniversalchardet-1.0.3.jar')
+    //noinspection GradleCompatible
+    api 'com.android.support:cardview-v7:25.3.0'
 }
