--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,16 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.key.magicbook"
-        minSdkVersion 21
+        minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        packagingOptions {
+            //解决编译时com.android.builder.merge.DuplicateRelativeFileException: More than one file was found with OS independent path 'META-INF/rxjava.properties'这个错误
+            exclude 'META-INF/rxjava.properties'
+        }
     }
     buildTypes {
         release {
