--- a/KeyLibrary/build.gradle
+++ b/KeyLibrary/build.gradle
@@ -69,9 +69,12 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     api 'com.yanzhenjie:permission:2.0.3'
     api 'com.github.bumptech.glide:glide:4.8.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+  //  implementation 'com.github.todou:appbarspring:1.0.9'
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation files('libs/juniversalchardet-1.0.3.jar')
     //noinspection GradleCompatible
     api 'com.android.support:cardview-v7:25.3.0'
+    api 'com.google.android.material:material:1.2.0-alpha05'
 }
