--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
             url "https://oss.sonatype.org/content/groups/public"
         }
         maven {url "https://developer.huawei.com/repo/"}
+        maven {url 'https://dl.bintray.com/umsdk/release'}
     }
 }
 
