--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "com.andkulikov:transitionseverywhere:1.6.5"
     implementation 'com.bigkoo:ConvenientBanner:2.1.4'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.contrarywind:Android-PickerView:4.1.7'
     implementation project(path: ':KeyLibrary')
     implementation project(path: ':FlycoTabLayout')
     implementation project(path: ':library')
