--- a/KeyLibrary/build.gradle
+++ b/KeyLibrary/build.gradle
@@ -75,6 +75,9 @@ dependencies {
   //  implementation 'com.github.todou:appbarspring:1.0.9'
     api 'jp.wasabeef:glide-transformations:4.1.0'
     api 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
+    api 'com.github.zhpanvip:BannerViewPager:2.6.6'
+    api 'com.github.zhpanvip:viewpagerindicator:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation files('libs/juniversalchardet-1.0.3.jar')
